classroom: icons: set a fixed height to the wrapper for whiteboard/file/wolfram button, which prevents wolfram from jumping up and causing artifacts/lag during re-render of selected icon

--- a/client/css/main.styl
+++ b/client/css/main.styl
@@ -656,6 +656,7 @@ body
 
 			.wrapper, .active-wrapper
 				width: 100%
+				height: 100px
 
 			.active-wrapper
 				background: white
